[project]
name = "comfyui-yaresolutionselector"
description = "Freely adjust resolution and aspect ratio, maintain pixel count of StableDiffusion model, or hook it up to upscaling nodes to get that 5k 16:10 wallpaper in just few clicks."
version = "1.3.0"
license = {text = "GPL License"}

[project.urls]
Repository = "https://github.com/Tropfchen/ComfyUI-yaResolutionSelector"

[tool.comfy]
PublisherId = "tropfchen"
DisplayName = "yaResolution Selector"
Icon = ""

[tool.black]
target-version = ["py311", "py312"]
